--- a/style.css
+++ b/style.css
@@ -10,11 +10,26 @@
     justify-content: center;
 }
 
+#center {
+    text-align: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 2px;
+}
+
 .score {
     display: flex;
     text-align: center;
     justify-content: center;
     font-size:55px;
+}
+
+.reset {
+    width: 58PX;
+    height: 58px;
+    margin-left: 7px;
+    margin-top: 9PX;
 }
 
 .cat1 {
